   (#451).

 * Fix HiDPI handling on Qt6 (#470).

 * Fix error editing arcs (#472).

 * Fix error editing ellipses (#473).

 * Show error message during startup on Windows when Ipe was installed
   on a path containing accented characters (or anything else not in
   ASCII) (#467).

 * Show error message when parsing an Ipe file containing a singular
   ellipse (#437).
 
----------------------------------------------------------------------

Ipe 7.2.27 (2023-05-05)

 * On Linux, migrate to Qt6 (#457).  Thanks Henri!

 * Change behaviour of transform tools to never switch the current
   selection (#459).

 * Action to deselect everything on current page.

 * Align center/H center/V center now aligns to the page if
   only one object selected (#449).

 * Fix absolute autosave paths (bug #433).

 * Add /opt/homebrew/bin to path on MacOS (#440).

 * Fix missing 'stroke-opacity' and 'opacity' attributes in
   'ipe.dtd' (#67).

 * Fix crash when 'recent_files_lua' ends up empty (bug #455).

 * Fix missing page numbers when there is no text (bug #450).

 * Don't lose group's link action during group edit (bug #456).

----------------------------------------------------------------------

Ipe 7.2.26 (2022-07-16)

 * Allow to store autosave file in same directory as document
   itself.  This is now also the default. (#426)

 * Circular graph edges no longer get broken when moving graph
   nodes (bug #424).

 * Make it possible to remap left_command on MacOS (bug #431).

 * Use PKG_CONFIG environment variable (#429).

----------------------------------------------------------------------

Ipe 7.2.25 (2022-06-19) Denmark Edition

 * Add spell-checking to text entry on Linux.

 * Change presentation style sheet to have 16:9 aspect ratio (#385).

 * Many more configuration options in prefs.canvas_style (#400 &
   #406).

 * Remove box around links in PDF output (#397).

 * Add 'script' text size (#410).

 * Use most-recently used directory in "Save" and "Save As" (#394).
